--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
   </head>
   <body>
     <div class="hero">
-      <div class="Hero-heading">
-        <h1>Extraordinary</h1>
-        <h1>Digital Experiences</h1>
-      </div>
-      <div class="video-container">
-        <video
-          src="Award-Winning Digital Product Agency — Humaan.mp4"
-          class="video"
-          autoplay
-          muted
-          loop
-        ></video>
+      <div class="hero-content">
+        <div class="Hero-heading">
+          <h1>Extraordinary</h1>
+          <h1>Digital</h1>
+          <h1>Experiences</h1>
+        </div>
+        <div class="video-container">
+          <video
+            src="Award-Winning Digital Product Agency — Humaan.mp4"
+            class="video"
+            autoplay
+            muted
+            loop
+          ></video>
+        </div>
       </div>
     </div>
-    <div class="content"><h2>Some more content</h2></div>
+    <div class="content"><h1>Some more content</h1></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
